--- a/clusters/cluster-production/flux-system/gotk-sync.yaml
+++ b/clusters/cluster-production/flux-system/gotk-sync.yaml
@@ -11,7 +11,7 @@ spec:
     branch: master
   secretRef:
     name: flux-system
-  url: ssh://git@github.com/dkysetiadi/kube-fluxcd
+  url: ssh://git@github.com/dkysetiadi/kube-flux
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
@@ -20,7 +20,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m0s
-  path: ./
+  path: ./clusters/cluster-production
   prune: true
   sourceRef:
     kind: GitRepository
