--- a/manifest/production/namespaces/ingress/ingress-nginx/deployment.yaml
+++ b/manifest/production/namespaces/ingress/ingress-nginx/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: ingress-deployment
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      app: ingress-deployment
   template:
     metadata:
       labels:
-        app: nginx
+        app: ingress-deployment
     spec:
       containers:
-      - name: nginx
+      - name: ingress-deployment
         image: nginx:latest
         resources:
           limits:
