--- a/manifest/production/namespaces/ingress/ingress-nginx/service.yaml
+++ b/manifest/production/namespaces/ingress/ingress-nginx/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: service-ingress
 spec:
   selector:
-    app: nginx
+    app: ingress-deployment
   ports:
   - port: 80
     targetPort: 80
